[package]
name = "devndat"
version = "0.1.0"
edition = "2021"
authors = ["Yazawazi <yazawazier@gmail.com>"]
description = "A simple tool to decrypt the light vndat"
homepage = "https://github.com/Yazawazi/devndat"
repository = "https://github.com/Yazawazi/devndat"
readme = "README.md"
keywords = ["vndat", "lightvn"]
categories = ["command-line-utilities"]
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.2.1", features = ["derive", "cargo"] }
zip = "0.6.4"

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
